@@ -10,23 +10,16 @@ public class FilterList {
                 .collect(Collectors.toList());
     }
 
-    private static void printEvenNumbers(ArrayList<Integer> list) {
-        System.out.println("All even elements in the range from 7 to 17: " + list.stream()
+    private static ArrayList<Integer> getEvenNumbersFromRange(ArrayList<Integer> list) {
+        return (ArrayList<Integer>) list.stream()
                 .filter(it -> it >= 7 && it <= 17 && it % 2 == 0)
-                .toList());
+                .collect(Collectors.toList());
     }
 
     private static ArrayList<Integer> multiplyList(ArrayList<Integer> list) {
         return (ArrayList<Integer>) list.stream()
                 .map(it -> it * 2)
                 .collect(Collectors.toList());
-    }
-
-    private static void printSortedList(ArrayList<Integer> list) {
-        System.out.println("The first 4 elements of the sorted list: " + list.stream()
-                .sorted()
-                .limit(4)
-                .toList());
     }
 
     private static ArrayList<Integer> leaveMoreTen(ArrayList<Integer> list) {
@@ -48,12 +41,22 @@ public class FilterList {
     }
 
     public static void printAllMethods(ArrayList<Integer> list) {
-        System.out.println("List without duplicates: " + removeDuplicates(list));
-        printEvenNumbers(list);
-        System.out.println("Multiply all elements by two: " + multiplyList(list));
-        printSortedList(list);
-        System.out.println("Items greater than 10: " + leaveMoreTen(list));
-        System.out.println("Number of items in the list: " + getCountItemsList(list));
-        System.out.println("Arithmetic mean of the elements: " + getArithmeticMean(list));
+        ArrayList<Integer> withoutDuplicates = removeDuplicates(list);
+        System.out.println("List without duplicates: " + withoutDuplicates);
+
+        ArrayList<Integer> onlyEvenFromRange = getEvenNumbersFromRange(withoutDuplicates);
+        System.out.println("All even elements in the range from 7 to 17: " + onlyEvenFromRange);
+
+        ArrayList<Integer> multiplyList = multiplyList(onlyEvenFromRange);
+        System.out.println("Multiply all elements by two: " + multiplyList);
+
+        ArrayList<Integer> onlyMoreTen = leaveMoreTen(multiplyList);
+        System.out.println("Items greater than 10: " + onlyMoreTen);
+
+        long countItemsList = getCountItemsList(onlyMoreTen);
+        System.out.println("Number of items in the list: " + countItemsList);
+
+        double arithmeticMean = getArithmeticMean(onlyMoreTen);
+        System.out.println("Arithmetic mean of the elements: " + arithmeticMean);
     }
 }
